# secure-notes-wasi

./: Cargo.toml  memdump.py  rust-toolchain.toml
.cargo/: config
src/: main.rs
