[patch.crates-io]
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip" }

[package]
name = "secure-notes-wasi"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["std"], default-features = false }
axum = { version = "^0.5.17", features = ["form", "headers"] }
# axum = { git = "https://github.com/rjzak/axum", branch = "wasi_wip", features = ["form", "headers"] }
# hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip", features = ["http1", "server"], default-features = false }
hyper = { version = "=0.14.23", features = ["http1", "server"] }
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
tokio = { version = "^1.28.0", features = ["rt", "macros"] }
uuid = { version = "^1.3.2", features = ["v4"], default-features = false }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { version = "^1.28.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
incremental = false
codegen-units = 1
lto = true
strip = true